--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
+    "dotenv": "^8.2.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
@@ -33,6 +34,8 @@
     "@types/react-router-dom": "^5.1.2",
     "clsx": "^1.0.4",
     "flexboxgrid": "^6.3.1",
+    "google-map-react": "^1.1.5",
+    "google-maps-react": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2"
