--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "clsx": "^1.0.4",
     "flexboxgrid": "^6.3.1",
     "google-map-react": "^1.1.5",
-    "google-maps-react": "^2.0.2",
+    "google-maps-react": "git+https://github.com/fullstackreact/google-maps-react.git",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2"
