updates to menu, added places lookup for extra information

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
       "@TestData/*": ["testData/*"],
       "@Context/*": ["context/*"],
       "@Assets/*": ["assets/*"],
-      "@Views/*": ["views/*"]
+      "@Views/*": ["views/*"],
+      "@Utils/*": ["utils/*"]
     }
   }
 }
