--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --open",
-    "build": "rm -rf ./dist && webpack src/index.tsx --mode production"
+    "build": "webpack src/index.tsx --mode production"
   },
   "keywords": [],
   "author": "Jamie Marsay",
