--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --open",
-    "build": "webpack src/index.tsx --mode production"
+    "build": "rm -rf dist && webpack src/index.tsx --mode production"
   },
   "keywords": [],
   "author": "Jamie Marsay",
@@ -29,6 +29,17 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@wdio/cli": "^5.10.4",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "@types/google-maps-react": "^2.0.3",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
